# Cognigram

./: .gitignore  README.md  package.json  pnpm-lock.yaml
apps/server/: .env.example  Cargo.toml
apps/server/src/: config.rs  db.rs  email.rs  error.rs  hash.rs  hub.rs  jwt.rs  lib.rs  main.rs  middleware.rs  oauth.rs  seed.rs  state.rs  totp.rs
apps/server/src/models/: channel.rs  chat.rs  mod.rs  sticker.rs  user.rs  verification.rs
apps/server/src/routes/: admin.rs  auth.rs  channels.rs  chats.rs  health.rs  mod.rs  search.rs  stickers.rs  uploads.rs  users.rs  ws.rs
apps/web/: .env.example  index.html  package.json  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx  router.tsx
apps/web/src/api/: auth.ts  channels.ts  chat.ts  client.ts  me.ts  search.ts  stickers.ts  uploads.ts  users.ts
apps/web/src/chat/: Avatar.tsx  ChannelManage.tsx  ChannelView.tsx  ChatHeader.tsx  ChatList.tsx  ChatListItem.tsx  Composer.tsx  CreateChannel.tsx  EmptyConversation.tsx  MessageBubble.tsx  MessageList.tsx  MyStickerPacks.tsx  Sidebar.tsx  StickerPicker.tsx  TypingDots.tsx  Wallpaper.tsx  WallpaperPicker.tsx  helpers.ts  icons.tsx
apps/web/src/components/: AnimatedPage.tsx  Background.tsx  Logo.tsx  ProtectedRoute.tsx
apps/web/src/lib/: notifications.ts  ws.ts
apps/web/src/pages/: Home.tsx  Landing.tsx  Login.tsx  PickUsername.tsx  Profile.tsx  Setup2FA.tsx  Signup.tsx  VerifyEmail.tsx
apps/web/src/store/: app-data.ts  auth.ts  presence.ts  typing.ts  ui.ts  wallpaper.ts
scripts/: recolor_logo.py
