[package]
name = "keracross-server"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[[bin]]
name = "keracross-server"
path = "src/main.rs"

[[bin]]
name = "smoke"
path = "src/bin/smoke.rs"

[dependencies]
# Runtime + HTTP
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros", "ws"] }
dashmap = "6"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-br", "compression-gzip", "limit"] }
hyper = { version = "1", features = ["full"] }
axum-extra = { version = "0.9", features = ["typed-header"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# MongoDB
mongodb = { version = "3", features = ["rustls-tls"] }

# Crypto
argon2 = "0.5"
jsonwebtoken = "9"
totp-rs = { version = "5", features = ["otpauth"] }
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"

# Email
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder"] }

# Misc
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
dotenvy = "0.15"
validator = { version = "0.18", features = ["derive"] }
async-trait = "0.1"
once_cell = "1"
futures-util = "0.3"
regex = "1"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = "symbols"
