[package]
name = "cognigram-server"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[[bin]]
name = "cognigram-server"
path = "src/main.rs"

[dependencies]
# Runtime + HTTP
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros", "ws", "multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
dashmap = "6"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-br", "compression-gzip", "limit", "fs"] }
hyper = { version = "1", features = ["full"] }
bytes = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"

# Embedded database (single-writer, MVCC reads)
redb = "2"

# HTTP client (for Google JWKS only) — rustls keeps it dep-light
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Crypto
jsonwebtoken = "9"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4", "fast-rng"] }

# Misc
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
dotenvy = "0.15"
validator = { version = "0.18", features = ["derive"] }
async-trait = "0.1"
once_cell = "1"
futures-util = "0.3"

# Performance: drop-in faster allocator
[target.'cfg(not(target_env = "msvc"))'.dependencies]
mimalloc = { version = "0.1", default-features = false }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
incremental = false
